# simple-graphing-calculator

./: CMakeLists.txt  README.md  sgc.desktop  sgc.rc
data/: imgui.ini
data/saves/: example1.ini  example2.ini  example3.ini  example4.ini  example5.ini  example6.ini  example7.ini  example8.ini
include/SGC/: error.hpp  graph.hpp  imgui.hpp  mINI.hpp  opengl.hpp  sgc.hpp  sgc_engine.hpp  utils.hpp
src/: error.cpp  graph.cpp  main.cpp  sgc_engine.cpp  utils.cpp
